.main-sidebar bug fix: change 1fr to calc(100% - 300px - var(--gap40))

--- a/css/main-sidebar.css
+++ b/css/main-sidebar.css
@@ -5,7 +5,8 @@ wide main and narrow sidebar
 .main-sidebar 
 {
     display: grid;
-    grid-template-columns: 1fr 300px;
+    /* grid-template-columns: 1fr 300px; */
+    grid-template-columns: calc(100% - 300px - var(--gap40)) 300px;
     gap: var(--gap40);
     margin: var(--gap40) auto;
 }
